# opensdg-ibestat-data

./: .gitignore  README.md  config_data.yml  package-lock.json  package.json  pyproject.toml
data/: indicator_1-2-1-SERIE-A.csv  indicator_1-2-1-SERIE-B.csv  indicator_1-2-1-SERIE-C.csv  indicator_1-2-1-SERIE-D.csv  indicator_1-2-1.csv  indicator_1-2-2-SERIE-A.csv  indicator_1-2-2-SERIE-B.csv  indicator_1-2-2-SERIE-C.csv  indicator_1-2-2-SERIE-D.csv  indicator_1-2-2.csv  indicator_1-4-1-SERIE-A.csv  indicator_1-4-1-SERIE-B.csv  indicator_1-4-1-SERIE-C.csv  indicator_1-4-1.csv  indicator_1-5-1-SERIE-A.csv  indicator_1-5-1.csv  indicator_1-5-2-SERIE-A.csv  indicator_1-5-2.csv  indicator_1-a-2-SERIE-A.csv  indicator_1-a-2-SERIE-B.csv  indicator_1-a-2.csv  indicator_10-1-1-SERIE-A.csv  indicator_10-1-1-SERIE-B.csv  indicator_10-1-1-SERIE-C.csv  indicator_10-1-1-SERIE-D.csv  indicator_10-1-1.csv  indicator_10-2-1-SERIE-A.csv  indicator_10-2-1-SERIE-B.csv  indicator_10-2-1.csv  indicator_10-4-1-SERIE-A.csv  indicator_10-4-1.csv  indicator_10-7-4-SERIE-A.csv  indicator_10-7-4.csv  indicator_11-1-1-SERIE-A.csv  indicator_11-1-1-SERIE-B.csv  indicator_11-1-1.csv  indicator_11-3-2-SERIE-A.csv  indicator_11-3-2.csv  indicator_11-4-1-SERIE-A.csv  indicator_11-4-1-SERIE-B.csv  (+342 more)
maps/: ConsellsInsulars.json  Mallorca.json  Menorca.json  Pitiuses.json  islas3IB_4326.geojson  islas4IB_4326_definitivo.geojson
meta/: 1-2-1-SERIE-A.md  1-2-1-SERIE-B.md  1-2-1-SERIE-C.md  1-2-1-SERIE-D.md  1-2-1.md  1-2-2-SERIE-A.md  1-2-2-SERIE-B.md  1-2-2-SERIE-C.md  1-2-2-SERIE-D.md  1-2-2.md  1-4-1.md  (+438 more)
(+129 files in other folders)
